Implement erasing the previous board with each new render
JS - added populatedBoard variable and assigned to the rendered divs, which is then erased each time the populateBoard function is called, making a fresh canvas for the new grid rendering

--- a/style/styles.css
+++ b/style/styles.css
@@ -3,3 +3,11 @@
     height: 500px;
     display: grid;
 }
+
+.change-color {
+    background-color: blue;
+}
+
+.change-color:active {
+    background-color: antiquewhite;
+}
